--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.2
   flutter_svg: ^1.0.0
+  firebase_core: ^1.11.0
+  cloud_firestore: ^3.1.6
 
 dev_dependencies:
   flutter_test:
@@ -61,7 +63,6 @@ flutter:
   assets:
     - assets/svg/
     - assets/images/
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
