--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: ^1.11.0
   cloud_firestore: ^3.1.6
   flutter_svg: ^1.0.1
+  get_it: ^7.2.0
 
 dev_dependencies:
   flutter_test:
